--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+#container{
+	background-color:#f5f5f5;
+	padding:20px;
+}
+.test{
+	background-color:white;
+	padding:10px;
+	
+}
+.au{
+	text-align:right;
+	font-style:italic;
+}
+
